--- a/Events2.html
+++ b/Events2.html
@@ -56,7 +56,7 @@
                 <div class="arrow">&#8595;</div> 
               </div>
               <div>
-                <a href="./Events.html"><img src="./img/list (1).svg" alt=""></a>
+                <a href="./index.html"><img src="./img/list (1).svg" alt=""></a>
                
                 <img src="./img/grid (1).svg" alt="">
               </div>
